--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         font-size: 22px;
         line-height: 1.4;
     }
+    ul {
+        margin-top: 10px;
+    }
+    .image-container {
+        text-align: center;
+        margin-top: 30px;
+    }
+    .image-container img {
+        max-width: 80%;
+        border-radius: 12px;
+        box-shadow: 0 4px 14px rgba(0,0,0,0.15);
+    }
     .nav {
         position: fixed;
         bottom: 20px;
@@ -67,41 +79,42 @@
     </ul>
 </div>
 
-<!-- SLIDE 2 – ARAS Lab Work -->
+<!-- SLIDE 2 — ARAS Research (with image) -->
 <div class="slide" id="slide2">
     <h1>My Work at ARAS Laboratory</h1>
     <ul>
-        <li>Developed voice-to-LLM motor controller for natural-language control</li>
-        <li>Designed multi-agent coordination & agentic-AI architectures</li>
-        <li>Worked on scalable control frameworks using RL and LLM-based policies</li>
-        <li>Hands-on experience integrating ML models with real robotic systems</li>
+        <li>Built an AI pipeline that processes both medical text and lab images</li>
+        <li>VLM + OCR for biomarker extraction</li>
+        <li>CNN models for image-based disease screening</li>
+        <li>Integrated ML predictors (SVM, XGBoost, MLP)</li>
+        <li>LLM agent orchestrates model selection & workflow</li>
+        <li>System deployed using Django, FastAPI, Celery, Docker</li>
     </ul>
+
+    <div class="image-container">
+        <img src="aras_flowchart.png" alt="ARAS System Flowchart">
+    </div>
 </div>
 
-<!-- SLIDE 3 – Research Interest in Your Area -->
+<!-- SLIDE 3 — Multi-Agent Tools -->
 <div class="slide" id="slide3">
-    <h1>My Research Interests</h1>
-    <h2>Aligned with your work in optimization + joint radar/communication</h2>
+    <h1>Multi-Agent Tools & Reporting</h1>
     <ul>
-        <li>Optimization-based signal processing</li>
-        <li>Waveform & filter design for joint radar–communication systems</li>
-        <li>Resource allocation under practical constraints (power, SINR, PAPR)</li>
-        <li>Robust design with imperfect CSI</li>
+        <li>LLM Doctors Finder for specialist recommendations</li>
+        <li>LLM Drugs Finder + Drugstore Finder</li>
+        <li>LLM Reporter powered by RAG (FAISS + web search)</li>
+        <li>Generates complete, human-readable health reports</li>
+        <li>Designed for automation, scalability, and deployment</li>
     </ul>
 </div>
 
-<!-- SLIDE 4 – Why I Want to Switch to Communication Systems -->
+<!-- SLIDE 4 — Why Communication Systems (to fill later) -->
 <div class="slide" id="slide4">
     <h1>Why Communication Systems?</h1>
-    <ul>
-        <li>Strong overlap with my background in optimization & control</li>
-        <li>JRC systems combine sensing + communication → perfect for my skillset</li>
-        <li>Desire to work on mathematically rigorous, high-impact problems</li>
-        <li>Your group’s work matches my exact interests and long-term goals</li>
-    </ul>
+    <p>(We will complete this slide together.)</p>
 </div>
 
-<!-- SLIDE 5 – Closing -->
+<!-- SLIDE 5 — Closing -->
 <div class="slide" id="slide5">
     <h1>Thank You</h1>
     <p>I look forward to discussing how I can contribute to your group.</p>
