--- a/index.html
+++ b/index.html
@@ -53,13 +53,11 @@
 
     ul {
         font-size: 22px;
-        line-height: 1.45;
+        line-height: 1.40;
         padding-left: 20px;
     }
 
-    .left {
-        width: 65%;
-    }
+    .left { width: 65%; }
 
     .right {
         width: 30%;
@@ -139,34 +137,8 @@
     </div>
 </div>
 
-<!-- SLIDE 2 — My Work at ARAS -->
+<!-- SLIDE 2 — About ARAS (with image) -->
 <div class="slide" id="slide2">
-    <div class="card">
-        <div class="card-header"></div>
-
-        <div class="card-content">
-            <div class="left">
-                <h1>My Work at ARAS</h1>
-                <div class="subtitle-line"></div>
-
-                <ul>
-                    <li>Developed a multi-modal AI pipeline for medical text and lab images</li>
-                    <li>Used VLM + OCR models for biomarker extraction</li>
-                    <li>Integrated ML predictors including SVM, XGBoost, and MLP</li>
-                    <li>Designed LLM-driven agents for workflow orchestration</li>
-                    <li>Built agents for drug checks, doctor recommendations, and reporting</li>
-                </ul>
-            </div>
-
-            <div class="right">
-                <img src="aras_flowchart.png" class="side-image">
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- SLIDE 3 — About ARAS (Robotic System) -->
-<div class="slide" id="slide3">
     <div class="card">
         <div class="card-header"></div>
 
@@ -174,6 +146,7 @@
             <div class="left">
                 <h1>About ARAS</h1>
                 <div class="subtitle-line"></div>
+
                 <ul>
                     <li>ARAS develops robotic and AI-powered systems to assist surgeons</li>
                     <li>Work involves surgical robotics, medical AI, and intelligent automation</li>
@@ -183,13 +156,35 @@
             </div>
 
             <div class="right">
-                <img src="aras_robot.png" class="side-image">
+                <img src="aras_work.jpg" class="side-image">
             </div>
         </div>
     </div>
 </div>
 
-<!-- SLIDE 4 — Full Flowchart -->
+<!-- SLIDE 3 — My Work at ARAS (NO picture) -->
+<div class="slide" id="slide3">
+    <div class="card">
+        <div class="card-header"></div>
+
+        <div class="card-content">
+            <div class="left" style="width:100%;">
+                <h1>My Work at ARAS</h1>
+                <div class="subtitle-line"></div>
+
+                <ul>
+                    <li>Developed a multi-modal AI pipeline for medical text and lab images</li>
+                    <li>Used VLM + OCR models for biomarker extraction</li>
+                    <li>Integrated ML models including SVM, XGBoost, and MLP</li>
+                    <li>Designed LLM-driven agents for workflow orchestration</li>
+                    <li>Built agents for drug checks, doctor recommendations, and reporting</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- SLIDE 4 — Flowchart -->
 <div class="slide" id="slide4">
     <div class="card">
         <div class="card-header"></div>
@@ -200,20 +195,20 @@
     </div>
 </div>
 
-<!-- SLIDE 5 — LLM + Motor Control System -->
+<!-- SLIDE 5 — LLM + Motor Control (NO picture) -->
 <div class="slide" id="slide5">
     <div class="card">
         <div class="card-header"></div>
 
-        <div class="card-content" style="align-items: flex-start;">
+        <div class="card-content">
             <div class="left" style="width:100%;">
                 <h1>LLM + Motor Control System</h1>
                 <div class="subtitle-line"></div>
                 <ul>
-                    <li>Built a system that converts natural-language commands into motor actions</li>
-                    <li>Includes speech recognition, language parsing, and safety logic</li>
-                    <li>Backend translates intent into deterministic motor commands</li>
-                    <li>Arduino runs a simple closed-loop controller to track target RPM</li>
+                    <li>Converts natural-language commands into safe motor actions</li>
+                    <li>Uses speech recognition, language parsing, and safety logic</li>
+                    <li>Backend generates deterministic motor commands</li>
+                    <li>Arduino controller tracks target RPM</li>
                 </ul>
             </div>
         </div>
