--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <ul>
                     <li>B.Sc. Electrical Engineering — AI and Robotics (KNTU)</li>
                     <li>AI Software Engineer at ARAS Robotics & AI Solutions</li>
-                    <li>Experienced in Web Apps, APIs, Deep Learning, Agentic AI, and Information Retrieval</li>
+                    <li>Experienced in Web Apps, APIs, Deep Learning, Agentic AI</li>
                     <li>Focused on building real-world AI systems that solve human problems</li>
                 </ul>
             </div>
@@ -247,3 +247,4 @@
 
 </body>
 </html>
+
