--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="card-header"></div>
 
         <div class="card-content" style="justify-content:center; align-items:center;">
-            <img src="aras_flowchart.png" class="side-image" style="max-width:85%;">
+<img src="aras_flowchart.png" style="max-width:100%; height:auto; border-radius:20px; box-shadow:0px 8px 22px rgba(0,0,0,0.12);">
         </div>
     </div>
 </div>
@@ -247,4 +247,5 @@
 
 </body>
 </html>
+
 
