--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
 
             <div class="right">
-                <img src="aras_work.jpg" class="side-image">
+                <img src="aras_work.png" class="side-image">
             </div>
         </div>
     </div>
@@ -247,5 +247,6 @@
 
 </body>
 </html>
+
 
 
