--- a/index.html
+++ b/index.html
@@ -156,11 +156,12 @@
             </div>
 
             <div class="right">
-                <img src="aras_work.png" class="side-image">
+                <img src="aras_work.png" style="width:100%; height:auto; border-radius:20px; box-shadow:0px 8px 22px rgba(0,0,0,0.12); object-fit:contain;">
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- SLIDE 3 — My Work at ARAS (NO picture) -->
 <div class="slide" id="slide3">
@@ -247,6 +248,7 @@
 
 </body>
 </html>
+
 
 
 
