--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <h1>Who I Am</h1>
                 <div class="subtitle-line"></div>
                 <ul>
-                    <li>B.Sc. Electrical Engineering — AI and Robotics (KNTU)</li>
+                    <li>B.Sc. Electrical Engineering — Control(KNTU)</li>
                     <li>AI Software Engineer at ARAS Robotics & AI Solutions</li>
                     <li>Experienced in Web Apps, APIs, Deep Learning, Agentic AI</li>
                     <li>Focused on building real-world AI systems that solve human problems</li>
@@ -248,6 +248,7 @@
 
 </body>
 </html>
+
 
 
 
